add course, fix save file issue